Phase_5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEY_do
    KEY_print
    OP_negate

Grammar

Rule 0     S' -> statement_list
Rule 1     statement -> compound_statement
Rule 2     statement -> declaration_statement
Rule 3     statement -> selection_statement
Rule 4     statement -> iteration_statement
Rule 5     statement -> expression_statement
Rule 6     statement -> SEMICOLON
Rule 7     compound_statement -> LBRACE statement_list RBRACE end
Rule 8     statement_list -> statement_list statement
Rule 9     statement_list -> empty
Rule 10    declaration_statement -> type_specifier declaration_list SEMICOLON
Rule 11    type_specifier -> KEY_int
Rule 12    type_specifier -> KEY_char
Rule 13    type_specifier -> KEY_float
Rule 14    type_specifier -> KEY_string
Rule 15    declaration_list -> single_var_declation COMMA declaration_list
Rule 16    declaration_list -> single_var_declation
Rule 17    single_var_declation -> IDENTIFIER
Rule 18    selection_statement -> KEY_if LPAREN expression save RPAREN statement
Rule 19    selection_statement -> KEY_if LPAREN expression save RPAREN statement KEY_else save statement
Rule 20    iteration_statement -> KEY_while label LPAREN expression save RPAREN statement end
Rule 21    iteration_statement -> KEY_for LPAREN optexpr label SEMICOLON optexpr save SEMICOLON optexpr RPAREN statement
Rule 22    label -> empty
Rule 23    save -> empty
Rule 24    end -> empty
Rule 25    optexpr -> assignment_expression
Rule 26    optexpr -> empty
Rule 27    expression_statement -> expression SEMICOLON
Rule 28    expression -> assignment_expression
Rule 29    expression -> expression COMMA assignment_expression
Rule 30    assignment_expression -> IDENTIFIER OP_assign INTEGER
Rule 31    assignment_expression -> IDENTIFIER OP_multiply INTEGER
Rule 32    assignment_expression -> IDENTIFIER OP_divide INTEGER
Rule 33    assignment_expression -> IDENTIFIER OP_mod INTEGER
Rule 34    assignment_expression -> IDENTIFIER OP_add INTEGER
Rule 35    assignment_expression -> IDENTIFIER OP_subtract INTEGER
Rule 36    assignment_expression -> IDENTIFIER OP_greater INTEGER
Rule 37    assignment_expression -> IDENTIFIER OP_less INTEGER
Rule 38    assignment_expression -> IDENTIFIER OP_greaterequal INTEGER
Rule 39    assignment_expression -> IDENTIFIER OP_lessequal INTEGER
Rule 40    assignment_expression -> IDENTIFIER OP_equal INTEGER
Rule 41    assignment_expression -> IDENTIFIER OP_notequal INTEGER
Rule 42    assignment_expression -> INTEGER OP_assign INTEGER
Rule 43    assignment_expression -> INTEGER OP_multiply INTEGER
Rule 44    assignment_expression -> INTEGER OP_divide INTEGER
Rule 45    assignment_expression -> INTEGER OP_mod INTEGER
Rule 46    assignment_expression -> INTEGER OP_add INTEGER
Rule 47    assignment_expression -> INTEGER OP_subtract INTEGER
Rule 48    assignment_expression -> INTEGER OP_greater INTEGER
Rule 49    assignment_expression -> INTEGER OP_less INTEGER
Rule 50    assignment_expression -> INTEGER OP_greaterequal INTEGER
Rule 51    assignment_expression -> INTEGER OP_lessequal INTEGER
Rule 52    assignment_expression -> INTEGER OP_equal INTEGER
Rule 53    assignment_expression -> INTEGER OP_notequal INTEGER
Rule 54    assignment_expression -> IDENTIFIER OP_assign IDENTIFIER
Rule 55    assignment_expression -> IDENTIFIER OP_multiply IDENTIFIER
Rule 56    assignment_expression -> IDENTIFIER OP_divide IDENTIFIER
Rule 57    assignment_expression -> IDENTIFIER OP_mod IDENTIFIER
Rule 58    assignment_expression -> IDENTIFIER OP_add IDENTIFIER
Rule 59    assignment_expression -> IDENTIFIER OP_subtract IDENTIFIER
Rule 60    assignment_expression -> IDENTIFIER OP_greater IDENTIFIER
Rule 61    assignment_expression -> IDENTIFIER OP_less IDENTIFIER
Rule 62    assignment_expression -> IDENTIFIER OP_greaterequal IDENTIFIER
Rule 63    assignment_expression -> IDENTIFIER OP_lessequal IDENTIFIER
Rule 64    assignment_expression -> IDENTIFIER OP_equal IDENTIFIER
Rule 65    assignment_expression -> IDENTIFIER OP_notequal IDENTIFIER
Rule 66    assignment_expression -> primary_expression
Rule 67    assignment_expression -> OP_subtract primary_expression
Rule 68    assignment_expression -> primary_expression OP_multiply primary_expression
Rule 69    assignment_expression -> primary_expression OP_divide primary_expression
Rule 70    assignment_expression -> primary_expression OP_mod primary_expression
Rule 71    assignment_expression -> primary_expression OP_add primary_expression
Rule 72    assignment_expression -> primary_expression OP_subtract primary_expression
Rule 73    assignment_expression -> primary_expression OP_greater primary_expression
Rule 74    assignment_expression -> primary_expression OP_less primary_expression
Rule 75    assignment_expression -> primary_expression OP_greaterequal primary_expression
Rule 76    assignment_expression -> primary_expression OP_lessequal primary_expression
Rule 77    assignment_expression -> primary_expression OP_equal primary_expression
Rule 78    assignment_expression -> primary_expression OP_notequal primary_expression
Rule 79    assignment_expression -> IDENTIFIER OP_assign assignment_expression
Rule 80    assignment_expression -> primary_expression OP_lessequal STRING
Rule 81    primary_expression -> INTEGER
Rule 82    primary_expression -> IDENTIFIER
Rule 83    primary_expression -> FLOAT
Rule 84    primary_expression -> CHARACTER
Rule 85    primary_expression -> STRING
Rule 86    primary_expression -> id_expression
Rule 87    id_expression -> IDENTIFIER
Rule 88    id_expression -> LPAREN expression RPAREN
Rule 89    empty -> <empty>

Terminals, with rules where they appear

CHARACTER            : 84
COMMA                : 15 29
FLOAT                : 83
IDENTIFIER           : 17 30 31 32 33 34 35 36 37 38 39 40 41 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 79 82 87
INTEGER              : 30 31 32 33 34 35 36 37 38 39 40 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 81
KEY_char             : 12
KEY_do               : 
KEY_else             : 19
KEY_float            : 13
KEY_for              : 21
KEY_if               : 18 19
KEY_int              : 11
KEY_print            : 
KEY_string           : 14
KEY_while            : 20
LBRACE               : 7
LPAREN               : 18 19 20 21 88
OP_add               : 34 46 58 71
OP_assign            : 30 42 54 79
OP_divide            : 32 44 56 69
OP_equal             : 40 52 64 77
OP_greater           : 36 48 60 73
OP_greaterequal      : 38 50 62 75
OP_less              : 37 49 61 74
OP_lessequal         : 39 51 63 76 80
OP_mod               : 33 45 57 70
OP_multiply          : 31 43 55 68
OP_negate            : 
OP_notequal          : 41 53 65 78
OP_subtract          : 35 47 59 67 72
RBRACE               : 7
RPAREN               : 18 19 20 21 88
SEMICOLON            : 6 10 21 21 27
STRING               : 80 85
error                : 

Nonterminals, with rules where they appear

assignment_expression : 25 28 29 79
compound_statement   : 1
declaration_list     : 10 15
declaration_statement : 2
empty                : 9 22 23 24 26
end                  : 7 20
expression           : 18 19 20 27 29 88
expression_statement : 5
id_expression        : 86
iteration_statement  : 4
label                : 20 21
optexpr              : 21 21 21
primary_expression   : 66 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 80
save                 : 18 19 19 20 21
selection_statement  : 3
single_var_declation : 15 16
statement            : 8 18 19 19 20 21
statement_list       : 7 8 0
type_specifier       : 10

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . empty
    (89) empty -> .

    SEMICOLON       reduce using rule 89 (empty -> .)
    LBRACE          reduce using rule 89 (empty -> .)
    KEY_if          reduce using rule 89 (empty -> .)
    KEY_while       reduce using rule 89 (empty -> .)
    KEY_for         reduce using rule 89 (empty -> .)
    KEY_int         reduce using rule 89 (empty -> .)
    KEY_char        reduce using rule 89 (empty -> .)
    KEY_float       reduce using rule 89 (empty -> .)
    KEY_string      reduce using rule 89 (empty -> .)
    IDENTIFIER      reduce using rule 89 (empty -> .)
    INTEGER         reduce using rule 89 (empty -> .)
    OP_subtract     reduce using rule 89 (empty -> .)
    FLOAT           reduce using rule 89 (empty -> .)
    CHARACTER       reduce using rule 89 (empty -> .)
    STRING          reduce using rule 89 (empty -> .)
    LPAREN          reduce using rule 89 (empty -> .)
    $end            reduce using rule 89 (empty -> .)

    statement_list                 shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> statement_list .
    (8) statement_list -> statement_list . statement
    (1) statement -> . compound_statement
    (2) statement -> . declaration_statement
    (3) statement -> . selection_statement
    (4) statement -> . iteration_statement
    (5) statement -> . expression_statement
    (6) statement -> . SEMICOLON
    (7) compound_statement -> . LBRACE statement_list RBRACE end
    (10) declaration_statement -> . type_specifier declaration_list SEMICOLON
    (18) selection_statement -> . KEY_if LPAREN expression save RPAREN statement
    (19) selection_statement -> . KEY_if LPAREN expression save RPAREN statement KEY_else save statement
    (20) iteration_statement -> . KEY_while label LPAREN expression save RPAREN statement end
    (21) iteration_statement -> . KEY_for LPAREN optexpr label SEMICOLON optexpr save SEMICOLON optexpr RPAREN statement
    (27) expression_statement -> . expression SEMICOLON
    (11) type_specifier -> . KEY_int
    (12) type_specifier -> . KEY_char
    (13) type_specifier -> . KEY_float
    (14) type_specifier -> . KEY_string
    (28) expression -> . assignment_expression
    (29) expression -> . expression COMMA assignment_expression
    (30) assignment_expression -> . IDENTIFIER OP_assign INTEGER
    (31) assignment_expression -> . IDENTIFIER OP_multiply INTEGER
    (32) assignment_expression -> . IDENTIFIER OP_divide INTEGER
    (33) assignment_expression -> . IDENTIFIER OP_mod INTEGER
    (34) assignment_expression -> . IDENTIFIER OP_add INTEGER
    (35) assignment_expression -> . IDENTIFIER OP_subtract INTEGER
    (36) assignment_expression -> . IDENTIFIER OP_greater INTEGER
    (37) assignment_expression -> . IDENTIFIER OP_less INTEGER
    (38) assignment_expression -> . IDENTIFIER OP_greaterequal INTEGER
    (39) assignment_expression -> . IDENTIFIER OP_lessequal INTEGER
    (40) assignment_expression -> . IDENTIFIER OP_equal INTEGER
    (41) assignment_expression -> . IDENTIFIER OP_notequal INTEGER
    (42) assignment_expression -> . INTEGER OP_assign INTEGER
    (43) assignment_expression -> . INTEGER OP_multiply INTEGER
    (44) assignment_expression -> . INTEGER OP_divide INTEGER
    (45) assignment_expression -> . INTEGER OP_mod INTEGER
    (46) assignment_expression -> . INTEGER OP_add INTEGER
    (47) assignment_expression -> . INTEGER OP_subtract INTEGER
    (48) assignment_expression -> . INTEGER OP_greater INTEGER
    (49) assignment_expression -> . INTEGER OP_less INTEGER
    (50) assignment_expression -> . INTEGER OP_greaterequal INTEGER
    (51) assignment_expression -> . INTEGER OP_lessequal INTEGER
    (52) assignment_expression -> . INTEGER OP_equal INTEGER
    (53) assignment_expression -> . INTEGER OP_notequal INTEGER
    (54) assignment_expression -> . IDENTIFIER OP_assign IDENTIFIER
    (55) assignment_expression -> . IDENTIFIER OP_multiply IDENTIFIER
    (56) assignment_expression -> . IDENTIFIER OP_divide IDENTIFIER
    (57) assignment_expression -> . IDENTIFIER OP_mod IDENTIFIER
    (58) assignment_expression -> . IDENTIFIER OP_add IDENTIFIER
    (59) assignment_expression -> . IDENTIFIER OP_subtract IDENTIFIER
    (60) assignment_expression -> . IDENTIFIER OP_greater IDENTIFIER
    (61) assignment_expression -> . IDENTIFIER OP_less IDENTIFIER
    (62) assignment_expression -> . IDENTIFIER OP_greaterequal IDENTIFIER
    (63) assignment_expression -> . IDENTIFIER OP_lessequal IDENTIFIER
    (64) assignment_expression -> . IDENTIFIER OP_equal IDENTIFIER
    (65) assignment_expression -> . IDENTIFIER OP_notequal IDENTIFIER
    (66) assignment_expression -> . primary_expression
    (67) assignment_expression -> . OP_subtract primary_expression
    (68) assignment_expression -> . primary_expression OP_multiply primary_expression
    (69) assignment_expression -> . primary_expression OP_divide primary_expression
    (70) assignment_expression -> . primary_expression OP_mod primary_expression
    (71) assignment_expression -> . primary_expression OP_add primary_expression
    (72) assignment_expression -> . primary_expression OP_subtract primary_expression
    (73) assignment_expression -> . primary_expression OP_greater primary_expression
    (74) assignment_expression -> . primary_expression OP_less primary_expression
    (75) assignment_expression -> . primary_expression OP_greaterequal primary_expression
    (76) assignment_expression -> . primary_expression OP_lessequal primary_expression
    (77) assignment_expression -> . primary_expression OP_equal primary_expression
    (78) assignment_expression -> . primary_expression OP_notequal primary_expression
    (79) assignment_expression -> . IDENTIFIER OP_assign assignment_expression
    (80) assignment_expression -> . primary_expression OP_lessequal STRING
    (81) primary_expression -> . INTEGER
    (82) primary_expression -> . IDENTIFIER
    (83) primary_expression -> . FLOAT
    (84) primary_expression -> . CHARACTER
    (85) primary_expression -> . STRING
    (86) primary_expression -> . id_expression
    (87) id_expression -> . IDENTIFIER
    (88) id_expression -> . LPAREN expression RPAREN

    SEMICOLON       shift and go to state 9
    LBRACE          shift and go to state 10
    KEY_if          shift and go to state 12
    KEY_while       shift and go to state 15
    KEY_for         shift and go to state 16
    KEY_int         shift and go to state 17
    KEY_char        shift and go to state 18
    KEY_float       shift and go to state 19
    KEY_string      shift and go to state 20
    IDENTIFIER      shift and go to state 22
    INTEGER         shift and go to state 23
    OP_subtract     shift and go to state 24
    FLOAT           shift and go to state 27
    CHARACTER       shift and go to state 28
    STRING          shift and go to state 26
    LPAREN          shift and go to state 13

    statement                      shift and go to state 3
    compound_statement             shift and go to state 4
    declaration_statement          shift and go to state 5
    selection_statement            shift and go to state 6
    iteration_statement            shift and go to state 7
    expression_statement           shift and go to state 8
    type_specifier                 shift and go to state 11
    expression                     shift and go to state 14
    assignment_expression          shift and go to state 21
    primary_expression             shift and go to state 25
    id_expression                  shift and go to state 29

state 2

    (9) statement_list -> empty .

    SEMICOLON       reduce using rule 9 (statement_list -> empty .)
    LBRACE          reduce using rule 9 (statement_list -> empty .)
    KEY_if          reduce using rule 9 (statement_list -> empty .)
    KEY_while       reduce using rule 9 (statement_list -> empty .)
    KEY_for         reduce using rule 9 (statement_list -> empty .)
    KEY_int         reduce using rule 9 (statement_list -> empty .)
    KEY_char        reduce using rule 9 (statement_list -> empty .)
    KEY_float       reduce using rule 9 (statement_list -> empty .)
    KEY_string      reduce using rule 9 (statement_list -> empty .)
    IDENTIFIER      reduce using rule 9 (statement_list -> empty .)
    INTEGER         reduce using rule 9 (statement_list -> empty .)
    OP_subtract     reduce using rule 9 (statement_list -> empty .)
    FLOAT           reduce using rule 9 (statement_list -> empty .)
    CHARACTER       reduce using rule 9 (statement_list -> empty .)
    STRING          reduce using rule 9 (statement_list -> empty .)
    LPAREN          reduce using rule 9 (statement_list -> empty .)
    $end            reduce using rule 9 (statement_list -> empty .)
    RBRACE          reduce using rule 9 (statement_list -> empty .)


state 3

    (8) statement_list -> statement_list statement .

    SEMICOLON       reduce using rule 8 (statement_list -> statement_list statement .)
    LBRACE          reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_if          reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_while       reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_for         reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_int         reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_char        reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_float       reduce using rule 8 (statement_list -> statement_list statement .)
    KEY_string      reduce using rule 8 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 8 (statement_list -> statement_list statement .)
    INTEGER         reduce using rule 8 (statement_list -> statement_list statement .)
    OP_subtract     reduce using rule 8 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 8 (statement_list -> statement_list statement .)
    CHARACTER       reduce using rule 8 (statement_list -> statement_list statement .)
    STRING          reduce using rule 8 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 8 (statement_list -> statement_list statement .)
    $end            reduce using rule 8 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 8 (statement_list -> statement_list statement .)


state 4

    (1) statement -> compound_statement .

    SEMICOLON       reduce using rule 1 (statement -> compound_statement .)
    LBRACE          reduce using rule 1 (statement -> compound_statement .)
    KEY_if          reduce using rule 1 (statement -> compound_statement .)
    KEY_while       reduce using rule 1 (statement -> compound_statement .)
    KEY_for         reduce using rule 1 (statement -> compound_statement .)
    KEY_int         reduce using rule 1 (statement -> compound_statement .)
    KEY_char        reduce using rule 1 (statement -> compound_statement .)
    KEY_float       reduce using rule 1 (statement -> compound_statement .)
    KEY_string      reduce using rule 1 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 1 (statement -> compound_statement .)
    INTEGER         reduce using rule 1 (statement -> compound_statement .)
    OP_subtract     reduce using rule 1 (statement -> compound_statement .)
    FLOAT           reduce using rule 1 (statement -> compound_statement .)
    CHARACTER       reduce using rule 1 (statement -> compound_statement .)
    STRING          reduce using rule 1 (statement -> compound_statement .)
    LPAREN          reduce using rule 1 (statement -> compound_statement .)
    $end            reduce using rule 1 (statement -> compound_statement .)
    RBRACE          reduce using rule 1 (statement -> compound_statement .)
    KEY_else        reduce using rule 1 (statement -> compound_statement .)


state 5

    (2) statement -> declaration_statement .

    SEMICOLON       reduce using rule 2 (statement -> declaration_statement .)
    LBRACE          reduce using rule 2 (statement -> declaration_statement .)
    KEY_if          reduce using rule 2 (statement -> declaration_statement .)
    KEY_while       reduce using rule 2 (statement -> declaration_statement .)
    KEY_for         reduce using rule 2 (statement -> declaration_statement .)
    KEY_int         reduce using rule 2 (statement -> declaration_statement .)
    KEY_char        reduce using rule 2 (statement -> declaration_statement .)
    KEY_float       reduce using rule 2 (statement -> declaration_statement .)
    KEY_string      reduce using rule 2 (statement -> declaration_statement .)
    IDENTIFIER      reduce using rule 2 (statement -> declaration_statement .)
    INTEGER         reduce using rule 2 (statement -> declaration_statement .)
    OP_subtract     reduce using rule 2 (statement -> declaration_statement .)
    FLOAT           reduce using rule 2 (statement -> declaration_statement .)
    CHARACTER       reduce using rule 2 (statement -> declaration_statement .)
    STRING          reduce using rule 2 (statement -> declaration_statement .)
    LPAREN          reduce using rule 2 (statement -> declaration_statement .)
    $end            reduce using rule 2 (statement -> declaration_statement .)
    RBRACE          reduce using rule 2 (statement -> declaration_statement .)
    KEY_else        reduce using rule 2 (statement -> declaration_statement .)


state 6

    (3) statement -> selection_statement .

    SEMICOLON       reduce using rule 3 (statement -> selection_statement .)
    LBRACE          reduce using rule 3 (statement -> selection_statement .)
    KEY_if          reduce using rule 3 (statement -> selection_statement .)
    KEY_while       reduce using rule 3 (statement -> selection_statement .)
    KEY_for         reduce using rule 3 (statement -> selection_statement .)
    KEY_int         reduce using rule 3 (statement -> selection_statement .)
    KEY_char        reduce using rule 3 (statement -> selection_statement .)
    KEY_float       reduce using rule 3 (statement -> selection_statement .)
    KEY_string      reduce using rule 3 (statement -> selection_statement .)
    IDENTIFIER      reduce using rule 3 (statement -> selection_statement .)
    INTEGER         reduce using rule 3 (statement -> selection_statement .)
    OP_subtract     reduce using rule 3 (statement -> selection_statement .)
    FLOAT           reduce using rule 3 (statement -> selection_statement .)
    CHARACTER       reduce using rule 3 (statement -> selection_statement .)
    STRING          reduce using rule 3 (statement -> selection_statement .)
    LPAREN          reduce using rule 3 (statement -> selection_statement .)
    $end            reduce using rule 3 (statement -> selection_statement .)
    RBRACE          reduce using rule 3 (statement -> selection_statement .)
    KEY_else        reduce using rule 3 (statement -> selection_statement .)


state 7

    (4) statement -> iteration_statement .

    SEMICOLON       reduce using rule 4 (statement -> iteration_statement .)
    LBRACE          reduce using rule 4 (statement -> iteration_statement .)
    KEY_if          reduce using rule 4 (statement -> iteration_statement .)
    KEY_while       reduce using rule 4 (statement -> iteration_statement .)
    KEY_for         reduce using rule 4 (statement -> iteration_statement .)
    KEY_int         reduce using rule 4 (statement -> iteration_statement .)
    KEY_char        reduce using rule 4 (statement -> iteration_statement .)
    KEY_float       reduce using rule 4 (statement -> iteration_statement .)
    KEY_string      reduce using rule 4 (statement -> iteration_statement .)
    IDENTIFIER      reduce using rule 4 (statement -> iteration_statement .)
    INTEGER         reduce using rule 4 (statement -> iteration_statement .)
    OP_subtract     reduce using rule 4 (statement -> iteration_statement .)
    FLOAT           reduce using rule 4 (statement -> iteration_statement .)
    CHARACTER       reduce using rule 4 (statement -> iteration_statement .)
    STRING          reduce using rule 4 (statement -> iteration_statement .)
    LPAREN          reduce using rule 4 (statement -> iteration_statement .)
    $end            reduce using rule 4 (statement -> iteration_statement .)
    RBRACE          reduce using rule 4 (statement -> iteration_statement .)
    KEY_else        reduce using rule 4 (statement -> iteration_statement .)


state 8

    (5) statement -> expression_statement .

    SEMICOLON       reduce using rule 5 (statement -> expression_statement .)
    LBRACE          reduce using rule 5 (statement -> expression_statement .)
    KEY_if          reduce using rule 5 (statement -> expression_statement .)
    KEY_while       reduce using rule 5 (statement -> expression_statement .)
    KEY_for         reduce using rule 5 (statement -> expression_statement .)
    KEY_int         reduce using rule 5 (statement -> expression_statement .)
    KEY_char        reduce using rule 5 (statement -> expression_statement .)
    KEY_float       reduce using rule 5 (statement -> expression_statement .)
    KEY_string      reduce using rule 5 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> expression_statement .)
    INTEGER         reduce using rule 5 (statement -> expression_statement .)
    OP_subtract     reduce using rule 5 (statement -> expression_statement .)
    FLOAT           reduce using rule 5 (statement -> expression_statement .)
    CHARACTER       reduce using rule 5 (statement -> expression_statement .)
    STRING          reduce using rule 5 (statement -> expression_statement .)
    LPAREN          reduce using rule 5 (statement -> expression_statement .)
    $end            reduce using rule 5 (statement -> expression_statement .)
    RBRACE          reduce using rule 5 (statement -> expression_statement .)
    KEY_else        reduce using rule 5 (statement -> expression_statement .)


state 9

    (6) statement -> SEMICOLON .

    SEMICOLON       reduce using rule 6 (statement -> SEMICOLON .)
    LBRACE          reduce using rule 6 (statement -> SEMICOLON .)
    KEY_if          reduce using rule 6 (statement -> SEMICOLON .)
    KEY_while       reduce using rule 6 (statement -> SEMICOLON .)
    KEY_for         reduce using rule 6 (statement -> SEMICOLON .)
    KEY_int         reduce using rule 6 (statement -> SEMICOLON .)
    KEY_char        reduce using rule 6 (statement -> SEMICOLON .)
    KEY_float       reduce using rule 6 (statement -> SEMICOLON .)
    KEY_string      reduce using rule 6 (statement -> SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (statement -> SEMICOLON .)
    INTEGER         reduce using rule 6 (statement -> SEMICOLON .)
    OP_subtract     reduce using rule 6 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 6 (statement -> SEMICOLON .)
    CHARACTER       reduce using rule 6 (statement -> SEMICOLON .)
    STRING          reduce using rule 6 (statement -> SEMICOLON .)
    LPAREN          reduce using rule 6 (statement -> SEMICOLON .)
    $end            reduce using rule 6 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 6 (statement -> SEMICOLON .)
    KEY_else        reduce using rule 6 (statement -> SEMICOLON .)


state 10

    (7) compound_statement -> LBRACE . statement_list RBRACE end
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . empty
    (89) empty -> .

    RBRACE          reduce using rule 89 (empty -> .)
    SEMICOLON       reduce using rule 89 (empty -> .)
    LBRACE          reduce using rule 89 (empty -> .)
    KEY_if          reduce using rule 89 (empty -> .)
    KEY_while       reduce using rule 89 (empty -> .)
    KEY_for         reduce using rule 89 (empty -> .)
    KEY_int         reduce using rule 89 (empty -> .)
    KEY_char        reduce using rule 89 (empty -> .)
    KEY_float       reduce using rule 89 (empty -> .)
    KEY_string      reduce using rule 89 (empty -> .)
    IDENTIFIER      reduce using rule 89 (empty -> .)
    INTEGER         reduce using rule 89 (empty -> .)
    OP_subtract     reduce using rule 89 (empty -> .)
    FLOAT           reduce using rule 89 (empty -> .)
    CHARACTER       reduce using rule 89 (empty -> .)
    STRING          reduce using rule 89 (empty -> .)
    LPAREN          reduce using rule 89 (empty -> .)

    statement_list                 shift and go to state 30
    empty                          shift and go to state 2

state 11

    (10) declaration_statement -> type_specifier . declaration_list SEMICOLON
    (15) declaration_list -> . single_var_declation COMMA declaration_list
    (16) declaration_list -> . single_var_declation
    (17) single_var_declation -> . IDENTIFIER

    IDENTIFIER      shift and go to state 33

    declaration_list               shift and go to state 31
    single_var_declation           shift and go to state 32

state 12

    (18) selection_statement -> KEY_if . LPAREN expression save RPAREN statement
    (19) selection_statement -> KEY_if . LPAREN expression save RPAREN statement KEY_else save statement

    LPAREN          shift and go to state 34


state 13

    (88) id_expression -> LPAREN . expression RPAREN
    (28) expression -> . assignment_expression
    (29) expression -> . expression COMMA assignment_expression
    (30) assignment_expression -> . IDENTIFIER OP_assign INTEGER
    (31) assignment_expression -> . IDENTIFIER OP_multiply INTEGER
    (32) assignment_expression -> . IDENTIFIER OP_divide INTEGER
    (33) assignment_expression -> . IDENTIFIER OP_mod INTEGER
    (34) assignment_expression -> . IDENTIFIER OP_add INTEGER
    (35) assignment_expression -> . IDENTIFIER OP_subtract INTEGER
    (36) assignment_expression -> . IDENTIFIER OP_greater INTEGER
    (37) assignment_expression -> . IDENTIFIER OP_less INTEGER
    (38) assignment_expression -> . IDENTIFIER OP_greaterequal INTEGER
    (39) assignment_expression -> . IDENTIFIER OP_lessequal INTEGER
    (40) assignment_expression -> . IDENTIFIER OP_equal INTEGER
    (41) assignment_expression -> . IDENTIFIER OP_notequal INTEGER
    (42) assignment_expression -> . INTEGER OP_assign INTEGER
    (43) assignment_expression -> . INTEGER OP_multiply INTEGER
    (44) assignment_expression -> . INTEGER OP_divide INTEGER
    (45) assignment_expression -> . INTEGER OP_mod INTEGER
    (46) assignment_expression -> . INTEGER OP_add INTEGER
    (47) assignment_expression -> . INTEGER OP_subtract INTEGER
    (48) assignment_expression -> . INTEGER OP_greater INTEGER
    (49) assignment_expression -> . INTEGER OP_less INTEGER
    (50) assignment_expression -> . INTEGER OP_greaterequal INTEGER
    (51) assignment_expression -> . INTEGER OP_lessequal INTEGER
    (52) assignment_expression -> . INTEGER OP_equal INTEGER
    (53) assignment_expression -> . INTEGER OP_notequal INTEGER
    (54) assignment_expression -> . IDENTIFIER OP_assign IDENTIFIER
    (55) assignment_expression -> . IDENTIFIER OP_multiply IDENTIFIER
    (56) assignment_expression -> . IDENTIFIER OP_divide IDENTIFIER
    (57) assignment_expression -> . IDENTIFIER OP_mod IDENTIFIER
    (58) assignment_expression -> . IDENTIFIER OP_add IDENTIFIER
    (59) assignment_expression -> . IDENTIFIER OP_subtract IDENTIFIER
    (60) assignment_expression -> . IDENTIFIER OP_greater IDENTIFIER
    (61) assignment_expression -> . IDENTIFIER OP_less IDENTIFIER
    (62) assignment_expression -> . IDENTIFIER OP_greaterequal IDENTIFIER
    (63) assignment_expression -> . IDENTIFIER OP_lessequal IDENTIFIER
    (64) assignment_expression -> . IDENTIFIER OP_equal IDENTIFIER
    (65) assignment_expression -> . IDENTIFIER OP_notequal IDENTIFIER
    (66) assignment_expression -> . primary_expression
    (67) assignment_expression -> . OP_subtract primary_expression
    (68) assignment_expression -> . primary_expression OP_multiply primary_expression
    (69) assignment_expression -> . primary_expression OP_divide primary_expression
    (70) assignment_expression -> . primary_expression OP_mod primary_expression
    (71) assignment_expression -> . primary_expression OP_add primary_expression
    (72) assignment_expression -> . primary_expression OP_subtract primary_expression
    (73) assignment_expression -> . primary_expression OP_greater primary_expression
    (74) assignment_expression -> . primary_expression OP_less primary_expression
    (75) assignment_expression -> . primary_expression OP_greaterequal primary_expression
    (76) assignment_expression -> . primary_expression OP_lessequal primary_expression
    (77) assignment_expression -> . primary_expression OP_equal primary_expression
    (78) assignment_expression -> . primary_expression OP_notequal primary_expression
    (79) assignment_expression -> . IDENTIFIER OP_assign assignment_expression
    (80) assignment_expression -> . primary_expression OP_lessequal STRING
    (81) primary_expression -> . INTEGER
    (82) primary_expression -> . IDENTIFIER
    (83) primary_expression -> . FLOAT
    (84) primary_expression -> . CHARACTER
    (85) primary_expression -> . STRING
    (86) primary_expression -> . id_expression
    (87) id_expression -> . IDENTIFIER
    (88) id_expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 22
    INTEGER         shift and go to state 23
    OP_subtract     shift and go to state 24
    FLOAT           shift and go to state 27
    CHARACTER       shift and go to state 28
    STRING          shift and go to state 26
    LPAREN          shift and go to state 13

    expression                     shift and go to state 35
    assignment_expression          shift and go to state 21
    primary_expression             shift and go to state 25
    id_expression                  shift and go to state 29

state 14

    (27) expression_statement -> expression . SEMICOLON
    (29) expression -> expression . COMMA assignment_expression

    SEMICOLON       shift and go to state 36
    COMMA           shift and go to state 37


state 15

    (20) iteration_statement -> KEY_while . label LPAREN expression save RPAREN statement end
    (22) label -> . empty
    (89) empty -> .

    LPAREN          reduce using rule 89 (empty -> .)

    label                          shift and go to state 38
    empty                          shift and go to state 39

state 16

    (21) iteration_statement -> KEY_for . LPAREN optexpr label SEMICOLON optexpr save SEMICOLON optexpr RPAREN statement

    LPAREN          shift and go to state 40


state 17

    (11) type_specifier -> KEY_int .

    IDENTIFIER      reduce using rule 11 (type_specifier -> KEY_int .)


state 18

    (12) type_specifier -> KEY_char .

    IDENTIFIER      reduce using rule 12 (type_specifier -> KEY_char .)

